# MTC-Bot

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  PROJECT_STRUCTURE.md  README.md  docker-compose.yml  pyproject.toml
models/btc_basic/: args.json
models/final_test/: args.json  preprocessor.pkl  training_results.json
models/official_patchtst/: training_results.json
models/test_cpu/: args.json
models/test_small/: args.json
results/: backtest_20250716_211803.json
scripts/: __init__.py  collect_data.py  demo_hybrid_ai_system.py  fetch_bybit_data.py  inference_official_patchtst.py  inference_patchtst.py  monitor_training.py  train_official_patchtst.py  train_patchtst.py
src/backtest_service/: run_backtest.py
src/broker_adapters/: bybit_adapter.py
src/data_service/bybit_ingestor/: config.yaml  producer.py  stream.py
src/optuna_service/: optimize_sma.py
src/strategy_dsl/: __init__.py  indicator.py  strategies.py
src/strategy_dsl/examples/: sma_crossover.yml
src/strategy_service/: config.py  live_engine.py
src/strategy_service/hybrid_ai/: bayesian_optimizer.py  bybit_fee_simulator.py  hybrid_strategy.py  rl_agent.py  rule_engine.py
src/strategy_service/patchtst/: data_loader.py  hybrid_strategy.py  model.py  model_improved.py  official_model.py  official_trainer.py  trainer.py
tests/: test_kafka_full.py  test_kafka_producer.py  test_live_engine.py
